--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,10 +2,10 @@
   <nav class="container-fluid px-md-3 px-lg-4">
     <a class="navbar-brand d-inline-flex align-items-center m-0 p-0 me-lg-6 me-xl-9 p-1 rounded text-reset" href="/">
       <span class="text-primary ">
-        <svg fill="currentColor" width="24" height="24" viewBox="0 0 32 32">
-          <rect x="4" y="3" width="24" height="7" rx="3.5" ry="3.5" />
-          <rect x="4" y="12" width="20" height="7" rx="3.5" ry="3.5" />
-          <rect x="4" y="21" width="14" height="7" rx="3.5" ry="3.5" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="#336aea" width="32" height="32" viewBox="0 0 32 32">
+          <rect x="6" y="6" width="20" height="4"/>
+          <rect x="6" y="14" width="20" height="4"/>
+          <rect x="6" y="18" width="6" height="8"/>
         </svg>
       </span>
       <h2 class="d-none d-md-block fw-semibold fs-5 ls-wide ms-2 mb-0">FastBootstrap</h2>
