--- a/layouts/index.html
+++ b/layouts/index.html
@@ -162,3 +162,7 @@
 {{ define "footer" }}
   {{ partial "footer" $ }}
 {{ end }}
+
+{{ define "head-meta-addons" }}
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=655628f0cc7d3c001931c883&product=sop' async='async'></script>
+{{ end }}
