--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -89,6 +89,7 @@
 
         <div class="bd-content px-4 px-md-6 px-lg-10 px-xl-20 py-8" data-bs-spy="scroll" data-bs-target="#doc-nav-{{ $index }}" data-bs-smooth-scroll="true" tabindex="0">
           {{ $content }}
+          {{ partial "docs-footer" $.Page }}
         </div>
       </div>
     </div>
