--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
   <div class="bd-masthead">
     <section class="container">
       <div class="max-w-4xl mx-auto pt-8 pt-lg-16">
-        <h1 class="display-4 fw-bold lh-1 text-center ls-tight">Awesome Bootstrap Theme Designed with Atlassian Design</h1>
+        <h1 class="display-4 fw-bold lh-sm text-center ls-tight">Awesome Bootstrap Theme Designed with Atlassian Design</h1>
         <p class="max-w-3xl mx-auto mt-6 lead fw-normal text-body-secondary text-center">
           A Beautiful Free Bootstrap theme with fully responsive, powerful CSS utilities, expertly crafted components with Atlassian Design. The perfect starting point for your next project.
         </p>
