update home components preview

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,28 +8,32 @@
 {{ end }}
 
 {{ define "components" }}
-<div class="container pt-8 pt-lg-16">
-  <h2 class="fs-6 fw-bold" style="color: var(--ds-text-accent-magenta);">Improving components for dark mode</h2>
-  <p class="display-6 h-4 fw-bolder mb-4">Components meets dark mode</p>
-  <p class="max-w-3xl text-body-secondary">
-    Improving our components for dark mode. In the dark mode, our designed components has its own unique color and style. <a href="/get-started/dark-mode">Learn dark mode</a>
-  </p>  
-</div>
-<div class="container-fluid bd-bg-light pb-4 pb-lg-8">
- <div class="container">
-  <div class="row g-4 mt-5 mt-lg-8">
-    <div class="col-lg-6" data-bs-theme="light">
-      <div class="d-flex h-100 flex-column p-4 text-body bg-body rounded">
-        {{ partial "home-components.html" (dict "id_prefix" "light_") }}
-      </div>
+<div class="container pt-8 pt-lg-16 text-center">
+  <p class="mb-2 fw-medium fs-6 text-primary">Beautiful Components ready for</p>
+  <h3 class="display-6 h-4 fw-bolder mb-4">Dark and Light Mode</h3>
+  <div class="d-flex justify-content-center gap-1 align-items-center">
+    <div class="btn-group btn-group-narrow" role="group">
+      <input type="radio" class="btn-check" name="btnColorMode" id="switchLightMode" value="light" autocomplete="off" checked />
+      <label class="btn btn-default btn-lg fs-sm" for="switchLightMode">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun-fill" viewBox="0 0 16 16">
+          <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
+        </svg>
+        <span>Light</span>
+      </label>
+      <input type="radio" class="btn-check" name="btnColorMode" id="switchDarkMode" value="dark" autocomplete="off" />
+      <label class="btn btn-default btn-lg fs-sm" for="switchDarkMode">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
+          <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path>
+          <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path>
+        </svg>
+        <span>Dark</span>
+      </label>
     </div>
-    <div class="col-lg-6" data-bs-theme="dark">
-      <div class="d-flex h-100 flex-column text-body bg-body p-4 rounded">
-        {{ partial "home-components.html" (dict "id_prefix" "dark_") }}
-      </div>
-    </div>
+
   </div>
- </div>
+</div>
+<div class="max-w-screen-xl mx-auto pt-4 pt-lg-8 pb-4 pb-lg-8 px-4">
+  {{ partial "home-components.html" }}
 </div>
 {{ end }}
 
