--- a/layouts/partials/home-components.html
+++ b/layouts/partials/home-components.html
@@ -1,98 +1,241 @@
-<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-circle-check text-success me-3"></i>Check out this library!
-    <button type="button" class="btn-close btn-close-sm pe-none" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-<div class="my-5 d-flex flex-column flex-lg-row align-items-start justify-content-end gap-4 gap-lg-6">
-    <div class="col-12 col-lg-5 d-flex flex-column justify-content-end pb-2">
-        <div class="my-3 d-flex align-items-center justify-content-end gap-3">
-            <a href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Hello Bootstrap!">Tooltip</a>
-            <span class="badge text-bg-success">5K</span>
-        </div>
-        <div class="my-4 d-flex align-items-center justify-content-end">
-            <input class="form-check-input me-3" type="checkbox" value="" checked />
-            <div class="form-check form-switch form-switch-lg d-inline-block">
-                <input class="form-check-input" type="checkbox" role="switch" />
-            </div>
-            <div class="form-check form-switch form-switch-lg d-inline-block">
-                <input class="form-check-input" type="checkbox" role="switch" checked />
-            </div>
-        </div>
-        <div class="text-end">
-            <div class="btn-group btn-group-narrow" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="{{.id_prefix}}btnradio" id="{{.id_prefix}}btnradio1"
-                    autocomplete="off" checked />
-                <label class="btn btn-default" for="{{.id_prefix}}btnradio1"><i
-                        class="fa-solid fa-align-left"></i></label>
-                <input type="radio" class="btn-check" name="{{.id_prefix}}btnradio" id="{{.id_prefix}}btnradio2"
-                    autocomplete="off" />
-                <label class="btn btn-default" for="{{.id_prefix}}btnradio2"><i
-                        class="fa-solid fa-align-center"></i></label>
-                <input type="radio" class="btn-check" name="{{.id_prefix}}btnradio" id="{{.id_prefix}}btnradio3"
-                    autocomplete="off" />
-                <label class="btn btn-default" for="{{.id_prefix}}btnradio3"><i
-                        class="fa-solid fa-align-right"></i></label>
-                <input type="radio" class="btn-check" name="{{.id_prefix}}btnradio" id="{{.id_prefix}}btnradio4"
-                    autocomplete="off" />
-                <label class="btn btn-default" for="{{.id_prefix}}btnradio4"><i
-                        class="fa-solid fa-align-justify"></i></label>
-            </div>
-        </div>
-        <div class="my-4 text-end">
-            <button class="btn btn-primary" type="button">Button A</button>
-            <button class="btn btn-link">Button link</button>
-        </div>
-        <div class="d-flex justify-content-end align-items-center gap-4">
-                <div class="progress d-inline-flex w-50">
-                    <div class="progress-bar bg-success w-75" role="progressbar"></div>
-                </div>
-                <span class="fs-sm text-body-tertiary ms-2">4 of 6</span>
-        </div>
+<div class="row g-4">
+  <div class="col-lg-7">
+    <!-- Alert -->
+    <div class="d-flex flex-column align-items-center flex-lg-row gap-4">
+      <div class="alert alert-success alert-dismissible flex-grow-1">
+        <i class="fa-solid fa-circle-check text-success me-3"></i>
+        Check out this library!
+        <button type="button" class="btn-close btn-close-sm pe-none" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
     </div>
-    <div class="col-12 col-lg-7">
-        <ul class="list-group border w-100">
-            <li class="list-group-item d-flex justify-content-between align-items-center border-bottom py-3">
-                <div class="d-flex align-items-center">
-                    <img class="avatar avatar-lg" src="/images/avatar/1.jpg" alt="" />
-                    <div class="ms-3 fs-sm">
-                        <p class="fw-semibold mb-0">John Doe</p>
-                        <p class="text-muted mb-0 fs-sm">@hotmail</p>
-                    </div>
-                </div>
-                <button class="btn btn-outline-primary btn-sm" type="button">View</button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center border-bottom py-3">
-                <div class="d-flex align-items-center">
-                    <img class="avatar avatar-lg" src="/images/avatar/3.jpg" alt="" />
-                    <div class="ms-3 fs-sm">
-                        <p class="fw-semibold mb-0">Alex Ray</p>
-                        <p class="text-muted mb-0">@gmail</p>
-                    </div>
-                </div>
-                <button class="btn btn-outline-primary btn-sm" type="button">View</button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center border-bottom py-3">
-                <div class="d-flex align-items-center">
-                    <img class="avatar avatar-lg" src="/images/avatar/5.jpg" alt="" />
-                    <div class="ms-3 fs-sm">
-                        <p class="fw-semibold mb-0">Kate Hunington</p>
-                        <p class="text-muted mb-0 fs-sm">@example</p>
-                    </div>
-                </div>
-                <button class="btn btn-outline-primary btn-sm" type="button">View</button>
-            </li>
-            <li class="list-group-item d-flex justify-content-center align-items-center">
-                <a href="#" class="btn btn-link">View All</a>
-            </li>
+    <!--Input Group-->
+    <div class="input-group input-group-start">
+      <input type="number" class="form-control" placeholder="2.00" />
+      <span class="input-group-text">$</span>
+    </div>
+    <!-- Radio Group -->
+    <div class="d-flex align-items-center flex-column justify-content-center justify-content-lg-start gap-4 flex-lg-row mt-6">
+      <div class="btn-group btn-group-narrow" role="group" aria-label="Basic radio toggle button group">
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked />
+        <label class="btn btn-default" for="btnradio1"><i class="fa-solid fa-align-left"></i></label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" />
+        <label class="btn btn-default" for="btnradio2"><i class="fa-solid fa-align-center"></i></label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" />
+        <label class="btn btn-default" for="btnradio3"><i class="fa-solid fa-align-right"></i></label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off" />
+        <label class="btn btn-default" for="btnradio4"><i class="fa-solid fa-align-justify"></i></label>
+      </div>
+      <div class="vr d-none d-lg-block"></div>
+      <div class="btn-group btn-group-narrow border rounded">
+        <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" checked />
+        <label class="btn btn-subtle" for="option1">Day</label>
+        <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" />
+        <label class="btn btn-subtle border-start" for="option2">Week</label>
+        <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" />
+        <label class="btn btn-subtle border-start" for="option3">Month</label>
+        <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off" />
+        <label class="btn btn-subtle border-start" for="option4">Year</label>
+      </div>
+      <div class="vr"></div>
+      <div class="dropdown">
+        <button class="btn btn-primary" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown <i class="fa-solid fa-angle-down fa-sm ms-1"></i></button>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <a class="dropdown-item" href="#">Action</a>
+          </li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
         </ul>
+      </div>
     </div>
-</div>
-<div class="d-flex gap-3 justify-content-around" novalidate>
-    <div class="">
-        <input type="text" class="form-control is-invalid pe-none" placeholder="Invalid" /> 
-     </div>
-    <div>
-        <input type="text" class="form-control is-valid pe-none" placeholder="Valid" />
+    <!-- Buttons -->
+    <div class="d-flex flex-wrap gap-4 mt-6">
+      <button class="btn btn-default" type="button"><i class="fa-solid fa-bookmark text-body-tertiary me-2"></i> Button</button>
+      <button class="btn btn-primary" type="button">Primary</button>
+      <div class="position-relative d-inline-flex">
+        <button type="button" class="btn btn-outline-primary pe-none fw-semibold ">Transactions</button>
+        <span class="d-flex position-absolute bd-h-3 bd-w-3 top-0 end-0 mt-n1 me-n1">
+          <span class="animate-ping position-absolute h-100 w-100 rounded-circle bg-primary bg-opacity-75"></span>
+          <span class="rounded-circle bd-h-3 bd-w-3 bg-primary"></span>
+        </span>
+      </div>
+      <button class="btn btn-link">Button link</button>
     </div>
-</div>
-<div class="mt-4 mt-lg-6 d-inline-flex">
-    <input type="range" class="form-range pe-none" id="{{.id_prefix}}customRange1" value="32" style="--track-fg-width:32%" />
+    <!-- Processbar -->
+    <div class="d-flex mt-5">
+      <a href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="FastBootstrap">Tooltip</a>
+      <div class="d-flex justify-content-end align-items-center gap-4 flex-grow-1 ">
+        <div class="progress d-inline-flex w-50">
+          <div class="progress-bar bg-success w-75" role="progressbar"></div>
+        </div>
+        <span class="fs-sm text-body-tertiary ms-2">4 of 6</span>
+      </div>
+    </div>
+    <!-- Checkbox & Radio -->
+    <div class="mt-5 d-flex flex-wrap align-items-center gap-2">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" checked disabled />
+        <label class="form-check-label" for="flexCheckDisabled">Disabled</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" checked />
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" />
+      </div>
+      <div class="form-check form-switch form-switch-lg d-inline-block">
+        <input class="form-check-input" type="checkbox" role="switch" checked />
+      </div>
+      <div class="form-check form-switch form-switch-lg d-inline-block">
+        <input class="form-check-input" type="checkbox" role="switch" />
+      </div>
+      <div class="d-inline-flex ms-lg-6">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked />
+          <label class="form-check-label" for="flexRadioDefault1">1</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" />
+          <label class="form-check-label" for="flexRadioDefault2">2</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" />
+          <label class="form-check-label" for="flexRadioDefault3">3</label>
+        </div>
+      </div>
+    </div>
+    <!-- Feedback -->
+    <div class="d-flex flex-column mt-5 gap-3">
+      <div>
+        <input type="text" class="form-control is-invalid" />
+        <div class="invalid-feedback">Invalid.</div>
+      </div>
+      <div>
+        <input type="text" class="form-control is-valid" value="Bootstrap Theme" />
+        <div class="valid-feedback">Valid!</div>
+      </div>
+    </div>
+    <!-- Pagination -->
+    <nav class="d-flex justify-content-center mt-5">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link pe-none" href="#"><i class="fas fa-angle-left"></i></a>
+        </li>
+        <li class="page-item active"><a class="page-link pe-none" href="#">1</a></li>
+        <li class="page-item"><a class="page-link pe-none" href="#">2</a></li>
+        <li class="page-item"><a class="page-link pe-none" href="#">3</a></li>
+        <li class="page-item"><a class="page-link pe-none" href="#">4</a></li>
+        <li class="page-item"><a class="page-link pe-none" href="#">5</a></li>
+        <li class="page-item"><a class="page-link pe-none" href="#">9</a></li>
+        <li class="page-item">
+          <a class="page-link pe-none" href="#"><i class="fas fa-angle-right"></i></a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class="col-lg-5">
+    <!-- Progress -->
+    <div class="position-relative m-4">
+      <div class="progress" style="height: 1px;">
+        <div class="progress-bar bg-primary" role="progressbar" aria-label="Progress" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">1</button>
+      <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-primary rounded-pill" style="width: 2rem; height:2rem;">2</button>
+      <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;">3</button>
+    </div>
+    <!-- List group -->
+    <ul class="list-group shadow-sm w-100 mt-10">
+      <li class="list-group-item d-flex justify-content-between align-items-center border-bottom py-3">
+        <div class="d-flex align-items-center">
+          <img class="avatar avatar-lg" src="/images/avatar/1.jpg" alt="" />
+          <div class="ms-3 fs-sm">
+            <p class="fw-medium mb-0">John Doe</p>
+            <p class="text-body-tertiary mb-0 fs-sm">@johndoe</p>
+          </div>
+        </div>
+        <button class="btn btn-outline-primary btn-sm" type="button">View</button>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center border-bottom py-3">
+        <div class="d-flex align-items-center">
+          <img class="avatar avatar-lg" src="/images/avatar/3.jpg" alt="" />
+          <div class="ms-3 fs-sm">
+            <p class="fw-medium mb-0">Alex Ray</p>
+            <p class="text-body-tertiary mb-0 fs-sm">@alexray</p>
+          </div>
+        </div>
+        <button class="btn btn-outline-primary btn-sm" type="button">View</button>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center border-bottom py-3">
+        <div class="d-flex align-items-center">
+          <img class="avatar avatar-lg" src="/images/avatar/5.jpg" alt="" />
+          <div class="ms-3 fs-sm">
+            <p class="fw-medium mb-0">Kate Hunington</p>
+            <p class="text-body-tertiary mb-0 fs-sm">@katehunington</p>
+          </div>
+        </div>
+        <button class="btn btn-outline-primary btn-sm" type="button">View</button>
+      </li>
+      <li class="list-group-item d-flex justify-content-center align-items-center">
+        <div class="avatar-stack">
+          <span class="avatar">+6</span>
+          <img class="avatar" src="/images/avatar/1.jpg" />
+          <img class="avatar" src="/images/avatar/2.jpg" />
+          <img class="avatar" src="/images/avatar/3.jpg" />
+          <img class="avatar" src="/images/avatar/4.jpg" />
+          <img class="avatar" src="/images/avatar/5.jpg" />
+        </div>
+      </li>
+    </ul>
+    <!-- Badge -->
+    <div class="mt-6 d-flex align-items-center gap-4">
+      <span class="badge rounded-pill text-bg-primary">CSS</span>
+      <span class="badge rounded-pill text-bg-secondary">Javascript</span>
+      <span class="badge rounded-pill text-bg-warning">Typescript</span>
+      <span class="badge rounded-pill text-bg-success">5K</span>
+    </div>
+    <!-- Tabs -->
+    <ul class="nav nav-fill nav-tabs mt-5" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="fill-tab-0" data-bs-toggle="tab" href="#" role="tab" aria-controls="fill-tabpanel-0" aria-selected="true"> Tab 1 </a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="fill-tab-1" data-bs-toggle="tab" href="#" role="tab" aria-controls="fill-tabpanel-1" aria-selected="false"> Tab 2 </a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="fill-tab-2" data-bs-toggle="tab" href="#" role="tab" aria-controls="fill-tabpanel-2" aria-selected="false"> Tab 3 </a>
+      </li>
+    </ul>
+     <!--Alert-->
+     <div class="alert alert-warning mt-5"><i class="fa-solid fa-circle-exclamation text-warning me-3"></i>Cannot connect to the database.</div>
+    <!-- Music play -->
+    <div class="card shadow mt-6">
+      <div class="card-body p-3">
+        <div class="row g-0">
+          <div class="col-4">
+            <div class="ratio ratio-4x3">
+              <img class="img-fluid rounded" src="/images/cards/1.jpg" />
+            </div>
+          </div>
+          <div class="col-8 ps-4">
+            <div class="d-flex flex-column">
+              <p class="fw-medium fa-sm text-center mb-lg-5 mt-3 d-none d-lg-block">Contemplative Reptile</p>
+              <div class="d-flex justify-content-center gap-1 mb-3 mb-lg-4">
+                <button type="button" class="btn btn-sm"><i class="fa-solid fa-backward-step"></i></button>
+                <button type="button" class="btn btn-sm text-primary">
+                  <i class="fa-solid fa-circle-play fa-xl"></i>
+                </button>
+                <button type="button" class="btn btn-sm"><i class="fa-solid fa-forward-step"></i></button>
+                <button type="button" class="btn btn-sm"><i class="fa-solid fa-repeat"></i></button>
+              </div>
+              <div class="d-flex gap-2 align-items-center bd-example-range">
+                <span class="text-body-secondary fs-xs">2:17</span>
+                <input type="range" class="form-range" value="32" style="--track-fg-width:32%" />
+                <span class="text-body-secondary fs-xs">4:06</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>   
+  </div>
 </div>
