--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -98,18 +98,19 @@
       padding: 4px 6px;
       border-radius: 3px;
       box-shadow: none;
-      color: $neutral-200;
+      color: var(--ds-text-accent-blue-bolder);
       font-weight: 500;
       transition: color 0.25s, background-color 0.25s;
 
       &:hover {
-        background-color: var(--ds-background-accent-gray-subtle);
+        color: var(--ds-text-inverse);
+        background-color: var(--ds-background-accent-gray-bolder);
       }
 
       &:focus,
       &[data-copy-state="copy-success"] {
         color: var(--ds-text-inverse);
-        background-color: var(--ds-background-accent-gray-bolder);
+        background-color: var(--ds-background-neutral-bold);
       }
     }
   }
@@ -226,4 +227,68 @@
 
 .bd-bg-light {
   background-color: var(--ds-background-neutral);
+}
+
+.bd-coding-cdn {
+  pre[class*="language-"] {
+    background-color: var(--ds-background-neutral);
+    color: var(--ds-text);
+
+    & > code {
+      mark {
+        background-color: rgba(65, 255, 244, 0.35);
+      }
+
+      .token.entity,
+      .token.operator,
+      .token.punctuation,
+      .token.url,
+      &.language-css .token.string,
+      &.style .token.string {
+        color: var(--ds-text);
+      }
+
+      .token.cdata,
+      .token.comment,
+      .token.doctype,
+      .token.prolog {
+        color: var(--ds-text-subtlest);
+      }
+
+      .token.atrule,
+      .token.builtin,
+      .token.char,
+      .token.constant,
+      .token.deleted,
+      .token.delimiter,
+      .token.inserted,
+      .token.keyword,
+      .token.property,
+      .token.selector,
+      .token.symbol,
+      .token.tag {
+        color: var(--ds-text-accent-purple);
+      }
+
+      .token.attr-name,
+      .token.boolean,
+      .token.color,
+      .token.string,
+      .token.variable {
+        color: var(--ds-text-accent-blue);
+      }
+
+      .token.attr-value,
+      .token.class-name,
+      .token.function {
+        color: var(--ds-text-accent-teal);
+      }
+
+      .token.important,
+      .token.number,
+      .token.regex {
+        color: #00c6ff;
+      }
+    }
+  }
 }
