--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,37 +1,13 @@
 {{ define "main" }}
   <main>
     {{ template "masthead" $ }}
-    {{ template "get-started" $}}
-    {{ template "components" }}
+    {{ template "get-started" $ }}
+    {{ template "components" $ }}
     {{ template "features" $ }}
   </main>
 {{ end }}
 
 {{ define "components" }}
-<div class="container pt-8 pt-lg-16 text-center">
-  <p class="mb-2 fw-medium fs-6 text-primary">Beautiful Components ready for</p>
-  <h3 class="display-6 h-4 fw-bolder mb-4">Dark and Light Mode</h3>
-  <div class="d-flex justify-content-center gap-1 align-items-center">
-    <div class="btn-group btn-group-narrow" role="group">
-      <input type="radio" class="btn-check" name="btnColorMode" id="switchLightMode" value="light" autocomplete="off" checked />
-      <label class="btn btn-default btn-lg fs-sm" for="switchLightMode">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun-fill" viewBox="0 0 16 16">
-          <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
-        </svg>
-        <span>Light</span>
-      </label>
-      <input type="radio" class="btn-check" name="btnColorMode" id="switchDarkMode" value="dark" autocomplete="off" />
-      <label class="btn btn-default btn-lg fs-sm" for="switchDarkMode">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
-          <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path>
-          <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path>
-        </svg>
-        <span>Dark</span>
-      </label>
-    </div>
-
-  </div>
-</div>
 <div class="max-w-screen-xl mx-auto pt-4 pt-lg-8 pb-4 pb-lg-8 px-4">
   {{ partial "home-components.html" }}
 </div>
@@ -42,8 +18,8 @@
     <section class="container">
       <div class="max-w-4xl mx-auto pt-8 pt-lg-16">
         <h1 class="display-4 fw-bold lh-sm text-center ls-tight">Awesome Bootstrap Theme Designed with Atlassian Design</h1>
-        <p class="max-w-3xl mx-auto mt-6 lead fw-normal text-body-secondary text-center">
-          A Beautiful Free Bootstrap theme with fully responsive, powerful CSS utilities, expertly crafted components with Atlassian Design. The perfect starting point for your next project.
+        <p class="max-w-3xl mx-auto mt-6 fs-4 fw-normal text-body-secondary text-center">
+          A Beautiful and Free Bootstrap theme with fully responsive, expertly crafted components with Atlassian Design.<br/>
         </p>
         <div class="mt-6 mt-sm-10 d-flex flex-column flex-md-row align-items-center justify-content-center gap-4 fs-sm">
           <a class="btn btn-primary btn-lg icon-link icon-link-hover bd-btn-lg" href="/get-started/installation">Get started <i class="fa-solid fa-arrow-right fa-sm bi w-auto h-auto"></i></a>
@@ -122,37 +98,27 @@
 {{ define "get-started" }}
 <div class="container pt-8 pt-lg-16">
   <div class="max-w-4xl mx-auto text-center">
-    <h2 class="display-5 fw-bold mb-4">Get started any way you want</h2>
-    <p class="lead fw-normal text-body-secondary mb-4">Use the CDN, install source files via package manager, or download the source code to get started.</p>
-    <p><a class="fs-5 icon-link icon-link-hover fw-medium" href="/get-started/installation">Read installation docs <i class="fa-sharp fa-solid fa-arrow-right bi w-auto h-auto lh-1 fa-sm"></i></a></p>
+    <h2 class="display-6 fw-bold mb-4">Get started any way you want</h2>
+    <p class="fw-normal text-body-secondary mb-4 lead">Use the CDN, install source files via package manager, or download the source code to get started.</p>
+    <p><a class="icon-link icon-link-hover fw-medium" href="/get-started/installation">Read installation docs <i class="fa-sharp fa-solid fa-arrow-right bi w-auto h-auto lh-1 fa-sm"></i></a></p>
   </div>
-  <div class="row g-4 g-md-6 mt-4 mt-lg-8">
+  <div class="row g-4 g-md-6 mt-4 mt-lg-6">
     <div class="col-lg-6 py-lg-4 pe-lg-5">
-      <div class="d-flex flex-column gap-3">
-       <div class="d-flex gap-2 align-items-center">
-        <div class="rounded bd-w-10 bd-h-10 d-flex justify-content-center align-items-center bd-icon-yellow">
-          <i class="fa-solid fa-code"></i>
+      <div class="d-flex flex-column">
+        <h4 class="h4">CSS</h4>   
+        <p>Use <a href="https://www.jsdelivr.com/package/npm/fastbootstrap">jsDelivr</a> to include the compiled and minified CSS file.</p>
+        <div class="bd-coding-cdn">
+          <pre><code class="language-html">{{ printf (`<link href="%s" rel="stylesheet" integrity=%q crossorigin="anonymous">`) .Site.Params.cdn.css (.Site.Params.cdn.css_hash | safeHTMLAttr) }}</code></pre>
         </div>
-        <h3 class="h4 mb-0">Install via package manager</h3>
-       </div>       
-        <p class="mb-0">Install FastBootstrap’s source Sass and JavaScript files via npm, RubyGems.</p>
-        <p class="fw-semibold mb-0">NPM</p>
-        <pre><code class="language-sh">$ npm install fastbootstrap</code></pre>
-        <p class="fw-semibold mb-0">or download the souce code</p>
-        <p><a href="{{ .Site.Params.download.source }}" target="_blank">Download the latest version</a></p>
       </div>
     </div>
     <div class="col-lg-6 py-lg-4 pe-lg-5 border-lg-start">
       <div class="d-flex flex-column">
-        <div class="d-flex gap-2 align-items-center mb-4">
-          <div class="rounded bd-w-10 bd-h-10 d-flex justify-content-center align-items-center bd-icon-purple"><i class="fa-solid fa-globe fa-lg"></i></div>
-          <h3 class="h4 mb-0">Include via CDN</h3>
-        </div>        
-        <p class="">When you only need to include FastBootstrap’s compiled CSS or JS, you can use <a href="https://www.jsdelivr.com/package/npm/fastbootstrap">jsDelivr</a>. </p>
-        <p class="fw-medium ">CSS</p>
-        <pre><code class="language-html">{{ printf (`<link href="%s" rel="stylesheet" integrity=%q crossorigin="anonymous">`) .Site.Params.cdn.css (.Site.Params.cdn.css_hash | safeHTMLAttr) }}</code></pre>
-        <p class="fw-medium">JS</p>
-        <pre><code class="language-html">{{ printf (`<script src="%s" integrity=%q crossorigin="anonymous"></script>`) .Site.Params.cdn.js (.Site.Params.cdn.js_hash | safeHTMLAttr) }}</code></pre>
+        <h4 class="h4">JS</h4>     
+        <p>Use Bootstrap official JS library. <a href="/get-started/javascript/">Learn more</a></p>
+        <div class="bd-coding-cdn">
+          <pre><code class="language-html">{{ printf (`<script src="%s" integrity=%q crossorigin="anonymous"></script>`) .Site.Params.bootstrap.cdn.js_bundle (.Site.Params.bootstrap.cdn.js_bundle_hash | safeHTMLAttr) }}</code></pre>
+        </div>
       </div>     
     </div>
   </div>
