--- a/layouts/partials/home-components.html
+++ b/layouts/partials/home-components.html
@@ -3,13 +3,13 @@
     <!-- Alert -->
     <div class="d-flex flex-column align-items-center flex-lg-row gap-4">
       <div class="alert alert-success alert-dismissible flex-grow-1">
-        <i class="fa-solid fa-circle-check text-success me-3"></i>
+        <i class="fa-solid fa-circle-check icon-success me-3"></i>
         Check out this library!
         <button type="button" class="btn-close btn-close-sm pe-none" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
     <!--Input Group-->
-    <div class="input-group input-group-start">
+    <div class="input-group input-group-prefix">
       <input type="number" class="form-control" placeholder="2.00" />
       <span class="input-group-text">$</span>
     </div>
@@ -196,17 +196,20 @@
     <!-- Tabs -->
     <ul class="nav nav-fill nav-tabs mt-5" role="tablist">
       <li class="nav-item" role="presentation">
-        <a class="nav-link active" id="fill-tab-0" data-bs-toggle="tab" href="#" role="tab" aria-controls="fill-tabpanel-0" aria-selected="true"> Tab 1 </a>
+        <a class="nav-link active" data-bs-toggle="tab" href="#simple-tabpanel-0" role="tab" aria-selected="true"> Tab 1 </a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" id="fill-tab-1" data-bs-toggle="tab" href="#" role="tab" aria-controls="fill-tabpanel-1" aria-selected="false"> Tab 2 </a>
+        <a class="nav-link" data-bs-toggle="tab" href="#simple-tabpanel-0" role="tab" aria-selected="false"> Tab 2 </a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" id="fill-tab-2" data-bs-toggle="tab" href="#" role="tab" aria-controls="fill-tabpanel-2" aria-selected="false"> Tab 3 </a>
+        <a class="nav-link" data-bs-toggle="tab" href="#simple-tabpanel-0" role="tab" aria-selected="false"> Tab 3 </a>
       </li>
     </ul>
+    <div class="tab-content d-none">
+      <div class="tab-pane active" id="simple-tabpanel-0" role="tabpanel" aria-labelledby="simple-tab-0">Tab 1 selected</div>
+    </div>
      <!--Alert-->
-     <div class="alert alert-warning mt-5"><i class="fa-solid fa-circle-exclamation text-warning me-3"></i>Cannot connect to the database.</div>
+     <div class="alert alert-warning mt-5"><i class="fa-solid fa-circle-exclamation icon-warning me-3"></i>Cannot connect to the database.</div>
     <!-- Music play -->
     <div class="card shadow mt-6">
       <div class="card-body p-3">
