--- a/layouts/partials/sections/before-body-end.html
+++ b/layouts/partials/sections/before-body-end.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.jsdelivr.net/npm/fastbootstrap@2.0.2/dist/js/fastbootstrap.min.js" integrity="sha256-o0tNXN7ia0O9G0qNbrzBkEEiQTv+GeW5EO4LjnfDkZk=" crossorigin="anonymous"></script>
+<script src="{{ .Site.Params.bootstrap.cdn.js_bundle }}" integrity="{{ .Site.Params.bootstrap.cdn.js_bundle_hash }}" crossorigin="anonymous"></script>
 {{ $vendor := resources.Match "js/vendor/*.js" }}
 {{ $js := resources.Match "js/*.js" }}
 {{ $bundleJS := $vendor | append $js | resources.Concat "/assets/js/main.js" | fingerprint }}
