--- a/layouts/partials/sections/head-src.html
+++ b/layouts/partials/sections/head-src.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fastbootstrap@2.0.2/dist/css/fastbootstrap.min.css" integrity="sha256-ywOwZUVHXdYvx4hw3+x4KBDt8Fb8cks0iorq4Tzeshg=" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ .Site.Params.cdn.css }}" integrity="{{ .Site.Params.cdn.css_hash }}" crossorigin="anonymous">
 
 {{ $targetCssPath := "/css/site.css" }}
 {{ $sassOptions := dict "targetPath" $targetCssPath "outputStyle" "expanded" "precision" 6 }}
